# IceChat

./: CMakeLists.txt  ChatServer.cpp  Client.cpp  GroupServer.cpp  GroupServer.h  GroupServerManager.cpp  GroupServerManager.h  User.cpp  User.h  chat.cpp  chat.h  chat.ice  ice.config
servants/: ChatServer.cpp  ChatServer.h  GroupServer.cpp  GroupServer.h  GroupServerManager.cpp  GroupServerManager.h  User.cpp  User.h
